--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             /* width: 225px; */
             width: fit-content;
             margin: 10px;
-            border: 2px solid black;
+            border: 3px solid black;  //Make it some visible
             border-radius: 10px;
             font-family: sans-serif;
             font-size: 1.4rem;
